# Text2ICS

./: .env.example  .gitignore  CLAUDE.md  Calender.py  README.md  TIMEZONE_BUGS_ANALYSIS.md  api_client.py  config.py  event_20241022_221422.ics  event_20241022_222309.ics  event_20241022_222518.ics  event_20241022_222622.ics  event_20241022_222823.ics  event_20241022_233554.ics  event_20241022_233710.ics  event_20241022_234355.ics  event_20241022_235549.ics  event_20241023_001100.ics  event_20241024_125449.ics  exceptions.py  pyproject.toml  requirements.txt  sample.py  test_api_client.py  test_calender.py  test_thread_safety.py
scripts/: install-hooks.sh
src/eventcalendar/: __init__.py  __main__.py
src/eventcalendar/config/: __init__.py  constants.py  settings.py
src/eventcalendar/core/: __init__.py  api_client.py  event_model.py  ics_builder.py  image_preprocessing.py  retry.py  timezone_utils.py
src/eventcalendar/exceptions/: __init__.py
src/eventcalendar/storage/: __init__.py  env_storage.py  key_manager.py  keyring_storage.py
src/eventcalendar/ui/: __init__.py  error_messages.py  main_window.py  preview.py
src/eventcalendar/ui/styles/: __init__.py  base.py  button_styles.py  manager.py
src/eventcalendar/ui/theme/: __init__.py  colors.py  manager.py  palettes.py  scales.py
src/eventcalendar/ui/widgets/: __init__.py  api_key_dialog.py  image_area.py
src/eventcalendar/utils/: __init__.py  date_parsing.py  masking.py  paths.py
